--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
           sudo rm -rf /usr/bin/conda
           export PATH="/usr/share/miniconda/bin:$PATH"
           conda create -n writer python=3.8.13 pip pandas=1.5.1 numpy=1.23.4
+      - name: "准备模型文件"
+        run: |
+          cd models
+          aria2c -x10 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Ancient.h5" "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/comp.romance.h5" "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Mysterious.h5" "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Reborn.h5"
       - name: "安装依赖"
         run: |
           export PATH="/usr/share/miniconda/bin:$PATH"
