--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
           source activate writer
           sudo sysctl -w net.core.rmem_max=250000
           nohup streamlit run webui.py & \
-          cloudflared tunnel --url $(hostname -I):8501
+          cloudflared tunnel --url localhost:8501
