--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,25 @@ jobs:
           conda create -n writer python=3.8.13 pip pandas=1.5.1 numpy=1.23.4
       - name: "准备模型文件"
         run: |
-          #cd models
-          #aria2c -c -j 3 -x 10 -s 16 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Ancient.h5" 
-          #aria2c -c -j 3 -x 10 -s 16 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/comp.romance.h5"
-          #aria2c -c -j 3 -x 10 -s 16 https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Mysterious.h5"
-          #aria2c -c -j 3 -x 10 -s 16 https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Reborn.h5"
+          cd models
+          aria2c -c -j 3 -x 10 -s 16 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Ancient.h5" 
+          aria2c -c -j 3 -x 10 -s 16 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/comp.romance.h5"
+          aria2c -c -j 3 -x 10 -s 16 https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Mysterious.h5"
+          aria2c -c -j 3 -x 10 -s 16 https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Reborn.h5"
       - name: "安装依赖"
         run: |
           export PATH="/usr/share/miniconda/bin:$PATH"
           source activate writer
           pip install -r requirements.txt
+      - name: "安装 GitHub 监控平台"
+        run: |
+          sudo sysctl -w net.core.rmem_max=2500000
+          sudo apt-get install netdata -y &>/dev/null && echo "监测平台安装成功." || echo "安装失败，请检查网络连接或更新apt cache"
+          sudo netdata -d -i 127.0.0.1 -p 8089
+          curl -Ls https://github.com/ekzhang/bore/releases/download/v0.4.1/bore-v0.4.1-x86_64-unknown-linux-musl.tar.gz | sudo tar zx -C /usr/bin
+          nohup bore local 8089 --to bore.pub &
+          sleep 10s
+          exit
       - name: "安装内网穿透服务"
         run: |
           aria2c https://github.com/cloudflare/cloudflared/releases/download/2022.12.1/cloudflared-linux-amd64.deb
