--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
           cd models
           aria2c -c -j 3 -x 10 -s 16 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Ancient.h5" 
           aria2c -c -j 3 -x 10 -s 16 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/comp.romance.h5"
-          aria2c -c -j 3 -x 10 -s 16 https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Mysterious.h5"
-          aria2c -c -j 3 -x 10 -s 16 https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Reborn.h5"
+          aria2c -c -j 3 -x 10 -s 16 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Mysterious.h5"
+          aria2c -c -j 3 -x 10 -s 16 "https://github.com/LemonFan-maker/Download-Models/releases/download/%E7%BB%BC%E5%90%88%E8%A8%80%E6%83%85%26%E7%8E%84%E5%B9%BB%26%E5%8F%A4%E4%BB%A3%E8%A8%80%E6%83%85%26%E9%87%8D%E7%94%9F(AI-Writer)/Reborn.h5"
       - name: "安装依赖"
         run: |
           export PATH="/usr/share/miniconda/bin:$PATH"
